--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Quiz v1</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 </head>
 <body>
-  Hello World!
+<div class="box">Quiz v1</div>
+<progress class="progress" value="15" max="100">15%</progress>
+<div class="container">
+    <div class="notification is-primary">
+        This container is <strong>centered</strong> on desktop and larger viewports.
+    </div>
+    <div class="notification is-primary">
+        tak
+    </div>
+    <div class="notification is-primary">
+        nie
+    </div>
+    <div class="notification is-primary">
+        może
+    </div>
+    <div class="notification is-primary">
+        chyba ty
+    </div>
+    <button class="button is-warning is-dark">check</button>
+    <button class="button is-success is-dark">next</button>
+</div>
+
+
 </body>
 </html>
