Improve game flow
Change next button visibility depending on game stage.
Add message for user at the end of the game.

--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
         Zaznacz poprawna odpowiedź.
     </div>
     <button id="check" class="button is-warning is-dark">check</button>
-    <button class="button is-success is-dark">next</button>
+    <button id="next" class="button is-success is-dark" disabled>next</button>
 </div>
 
 
