Activate progress bar
Add values which changes quiz progress.
Fetch numbers of questions from backend.

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="box">Quiz v1</div>
-<progress class="progress" value="15" max="100">15%</progress>
+<progress id="progress" class="progress" value="0" max="0">15%</progress>
 <div class="container">
     <div id="question" class="notification is-primary">
         This container is <strong>centered</strong> on desktop and larger viewports.
